--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
       </div>
     </div>
     <footer>
-      <p>&copy; 2025 Cafeteria Isabela Plaza Central &copy;</p>
+      <p>&copy; 2025 Cafeteria Isabela Lago &copy;</p>
     </footer>
   </body>
 </html>
