--- a/index.html
+++ b/index.html
@@ -36,16 +36,16 @@
       <div class="menu-day">
         <h3>Martes</h3>
         <ul>
-          <li>Sancocho</li>
-          <li>Blanquillos</li>
+          <li>Sopa de cuchuco</li>
+          <li>Garbanzos</li>
           <li>Verduras</li>
           <li>Papa amarilla</li>
-          <li>Filete de pollo en salsa de champiñones</li>
+          <li>Arroz mixto</li>
+          <li>Contramuslo apanado</li>
           <li>Milanesa de pollo</li>
-          <li>Milanesa de pescado</li>
-          <li>Lasagna mixta</li>
-          <li>Muslos a la Coca Cola</li>
-          <li>Morrillo a la criolla</li>
+          <li>Costilla a la BBQ</li>
+          <li>Shop sue de cerdo</li>
+          <li>>Filete a la plancha</li>
           <li>Ensalada mixta</li>
           <li>Aguapanela con limon/Limonada/jugo sin azucar</li>
         </ul>
