--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
           <li>Milanesa de pollo</li>
           <li>Costilla a la BBQ</li>
           <li>Shop sue de cerdo</li>
-          <li>>Filete a la plancha</li>
+          <li>Filete a la plancha</li>
           <li>Ensalada mixta</li>
           <li>Aguapanela con limon/Limonada/jugo sin azucar</li>
         </ul>
