--- a/index.html
+++ b/index.html
@@ -54,16 +54,16 @@
       <div class="menu-day">
         <h3>Miércoles</h3>
         <ul>
-          <li>Sopa de tortilla</li>
-          <li>Frijol Caraota</li>
+          <li>Sopa de moneditas de platano</li>
+          <li>Blanquillos</li>
           <li>Verduras</li>
           <li>Papa amarilla</li>
-          <li>Filete de pollo al curry</li>
+          <li>Filete de pollo a la napolitana</li>
           <li>Milanesa de pollo</li>
-          <li>cerdo al chimichurri</li>
-          <li>Desgranado de Restaurante</li>
-          <li>Contramuslos napolitanos</li>
-          <li>Suprema de pollo</li>
+          <li>Carne desmechada</li>
+          <li>Lomo de cerdo en salsa al vino</li>
+          <li>pollo a la broaster</li>
+          <li>Suprema de pollo en salsa de queso</li>
           <li>Ensalada dulce</li>
           <li>Limonada/te frio/jugo sin azucar</li>
         </ul>
