--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
           <li>Milanesa de pollo</li>
           <li>Carne desmechada</li>
           <li>Lomo de cerdo en salsa al vino</li>
-          <li>pollo a la broaster</li>
+          <li>Pollo a la broaster</li>
           <li>Suprema de pollo en salsa de queso</li>
           <li>Ensalada dulce</li>
           <li>Limonada/te frio/jugo sin azucar</li>
