--- a/index.html
+++ b/index.html
@@ -94,15 +94,16 @@
           <li>Frijoles</li>
           <li>Verduras</li>
           <li>Papa amarilla</li>
-          <li>Chicharron</li>
-          <li>Filete de pollo a la napolitana</li>
+          <li>Chorizo trifasico</li>
+          <li>Combinado de chorizo con carne molida</li>
           <li>Milanesa de pollo</li>
           <li>Carne Molida</li>
           <li>Chorizos</li>
-          <li>Contramuslo en su jugo</li>
+          <li>Contramuslo a la criolla</li>
+          <li>Filete de pollo en salsa de champiñones</li>
           <li>Ensalada roja</li>
           <li>Ensalada mixta</li>
-          <li>Aguapanela con limon/Limonada/jugo sin azucar</li>
+          <li>Aguapanela con limon/Limonada/jugo de mora sin azucar</li>
         </ul>
       </div>
       <div class="menu-alergenos">
