--- a/index.html
+++ b/index.html
@@ -18,18 +18,18 @@
       <div class="menu-day">
         <h3>Lunes</h3>
         <ul>
-          <li>Sopa de Cuchuco</li>
+          <li>Sopa de cerepollo</li>
           <li>Lentejas</li>
           <li>Verduras</li>
           <li>Papa amarilla</li>
-          <li>Filete de pollo a la plancha</li>
-          <li>Milanesa de pollo</li>
-          <li>Lomo de cerdo en salsa teriyake</li>
-          <li>Costilla a la BBQ</li>
+          <li>Pescado apanado</li>
+          <li>Shopsue de cerdo</li>
+          <li>Albondigas a la napolitana</li>
           <li>Contramuslo a la criolla</li>
-          <li>Higado encebollado</li>
+          <li>Milanesa de pollo</li>
+          <li>Filete de pollo en salsa de albahaca</li>
           <li>Ensalada mixta</li>
-          <li>Aguapanela con limon/te frio/jugo sin azucar</li>
+          <li>Aguapanela con limon/te frio/jugo de piña sin azucar</li>
         </ul>
       </div>
 
