--- a/index.html
+++ b/index.html
@@ -36,18 +36,18 @@
       <div class="menu-day">
         <h3>Martes</h3>
         <ul>
-          <li>Sopa de cuchuco</li>
-          <li>Blanquillos</li>
+          <li>Sopa de guineo</li>
+          <li>Frijoles caraotas</li>
           <li>Verduras</li>
           <li>Papa amarilla</li>
-          <li>Arroz mixto</li>
-          <li>Contramuslo apanado</li>
+          <li>Arroz con pollo</li>
+          <li>Lomo de cerdo en salsa de maracuya</li>
           <li>Milanesa de pollo</li>
-          <li>Costilla a la BBQ</li>
-          <li>Shop sue de cerdo</li>
-          <li>Filete a la plancha</li>
-          <li>Ensalada mixta</li>
-          <li>Aguapanela con limon/Limonada/jugo sin azucar</li>
+          <li>Carne desmechada con maicitos</li>
+          <li>Contramuslo apanado</li>
+          <li>Filete en salsa de champiñones</li>
+          <li>Ensalada dulce</li>
+          <li>Aguapanela con limon/Limonada/jugo de mora sin azucar</li>
         </ul>
       </div>
 
