--- a/index.html
+++ b/index.html
@@ -54,18 +54,18 @@
       <div class="menu-day">
         <h3>Miércoles</h3>
         <ul>
-          <li>Sopa de moneditas de platano</li>
-          <li>Garbanzos</li>
-          <li>Verduras</li>
+          <li>Sopa campesina</li>
+          <li>Alverjas</li>
+          <li>Verduras al vapor</li>
           <li>Papa amarilla</li>
-          <li>Filete de pollo a la napolitana</li>
+          <li>Fricase de pollo</li>
           <li>Milanesa de pollo</li>
-          <li>Carne desmechada</li>
-          <li>Lomo de cerdo en salsa al vino</li>
-          <li>Pollo a la broaster</li>
-          <li>Suprema de pollo en salsa de queso</li>
-          <li>Ensalada dulce</li>
-          <li>Limonada/te frio/jugo sin azucar</li>
+          <li>Lomo en salsa de maracuya</li>
+          <li>Hamburguesa en salsa BBQ</li>
+          <li>Chuleta de cerdo</li>
+          <li>Contramuslo a la criolla</li>
+          <li>Ensalada mixta</li>
+          <li>Limonada/te frio/jugo de mango sin azucar</li>
         </ul>
       </div>
 
