--- a/index.html
+++ b/index.html
@@ -72,18 +72,18 @@
       <div class="menu-day">
         <h3>Jueves</h3>
         <ul>
-          <li>Sopa de verduras</li>
-          <li>Alverjas</li>
-          <li>Verduras</li>
+          <li>Sopa de platano frito</li>
+          <li>Garbanzos</li>
+          <li>Ullucos guisados</li>
           <li>Papa amarilla</li>
-          <li>Filete de pollo a las finas hierbas</li>
+          <li>Cerdo a la plancha con chimichurri</li>
           <li>Milanesa de pollo</li>
-          <li>Encocado de bagre</li>
-          <li>Albondigas</li>
-          <li>Contramuslo a la broaster</li>
-          <li>Shop sue de costilla</li>
+          <li>Morrillo a la criolla</li>
+          <li>Filete en salsa de tocineta</li>
+          <li>Contramuslo a la napolitana</li>
+          <li>Pescado apanado</li>
           <li>Ensalada mixta</li>
-          <li>Aguapanela con limon/Limonada/jugo sin azucar</li>
+          <li>Aguapanela con limon/Limonada/jugo de mora sin azucar</li>
         </ul>
       </div>
 
