--- a/index.html
+++ b/index.html
@@ -92,18 +92,17 @@
         <ul>
           <li>Sopa de pasta</li>
           <li>Frijoles</li>
-          <li>Verduras</li>
+          <li>Suquini al vapor</li>
           <li>Papa amarilla</li>
           <li>Chorizo trifasico</li>
           <li>Combinado de chorizo con carne molida</li>
           <li>Milanesa de pollo</li>
           <li>Carne Molida</li>
-          <li>Chorizos</li>
           <li>Contramuslo a la criolla</li>
-          <li>Filete de pollo en salsa de champiñones</li>
+          <li>Filete de pollo en salsa de albahaca</li>
           <li>Ensalada roja</li>
           <li>Ensalada mixta</li>
-          <li>Aguapanela con limon/Limonada/jugo de mora sin azucar</li>
+          <li>Aguapanela con limon/Limonada/jugo de piña sin azucar</li>
         </ul>
       </div>
       <div class="menu-alergenos">
