--- a/index.html
+++ b/index.html
@@ -18,18 +18,19 @@
       <div class="menu-day">
         <h3>Lunes</h3>
         <ul>
-          <li>Sopa de cerepollo</li>
+          <li>Sopa de cuchuco</li>
           <li>Lentejas</li>
           <li>Verduras</li>
+          <li>Pasta a las finas hierbas</li>            
           <li>Papa amarilla</li>
+          <li>Carne molida a la boloñesa</li>
+          <li>Desgranado de pollo</li>
           <li>Pescado apanado</li>
-          <li>Shopsue de cerdo</li>
-          <li>Albondigas a la napolitana</li>
           <li>Contramuslo a la criolla</li>
           <li>Milanesa de pollo</li>
-          <li>Filete de pollo en salsa de albahaca</li>
+          <li>Costilla de res en su jugo</li>
           <li>Ensalada mixta</li>
-          <li>Aguapanela con limon/te frio/jugo de piña sin azucar</li>
+          <li>Aguapanela con limon/te frio/jugo de mango sin azucar</li>
         </ul>
       </div>
 
