--- a/index.html
+++ b/index.html
@@ -37,18 +37,18 @@
       <div class="menu-day">
         <h3>Martes</h3>
         <ul>
-          <li>Sopa de guineo</li>
-          <li>Frijoles caraotas</li>
-          <li>Verduras</li>
+          <li>Sancocho</li>
+          <li>Alverjas</li>
+          <li>Verduras al vapor</li>
           <li>Papa amarilla</li>
-          <li>Arroz con pollo</li>
-          <li>Lomo de cerdo en salsa de maracuya</li>
+          <li>Suprema de pollo en champiñones</li>
+          <li>Costilla en salsa BBQ</li>
           <li>Milanesa de pollo</li>
-          <li>Carne desmechada con maicitos</li>
-          <li>Contramuslo apanado</li>
-          <li>Filete en salsa de champiñones</li>
+          <li>Pincho mixto de costilla y pollo</li>
+          <li>Contramuslo a la broaster</li>
+          <li>Filete de pollo a las finas hierbas</li>
           <li>Ensalada dulce</li>
-          <li>Aguapanela con limon/Limonada/jugo de mora sin azucar</li>
+          <li>Aguapanela con limon/Limonada/jugo de piña sin azucar</li>
         </ul>
       </div>
 
