--- a/index.html
+++ b/index.html
@@ -123,6 +123,9 @@
       </div>
     </div>
     <footer>
+      <div class="link">
+        <a href="https://isabelaplazoleta.netlify.app/">Menu cafeteria isabela Plazoleta</a>
+      </div>
       <p>&copy; 2025 Cafeteria Isabela Lago &copy;</p>
     </footer>
   </body>
