--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
     </div>
     <footer>
       <div class="link">
-        <a href="https://isabelaplazoleta.netlify.app/">Menu cafeteria isabela Plazoleta</a>
+        <a href="https://isabelaplazoleta.netlify.app/">Menu Cafeteria Isabela Plazoleta</a>
       </div>
       <p>&copy; 2025 Cafeteria Isabela Lago &copy;</p>
     </footer>
