--- a/index.html
+++ b/index.html
@@ -53,20 +53,19 @@
       </div>
 
       <div class="menu-day">
-        <h3>Miércoles</h3>
+        <h3>Miércoles 14 de mayo de 2025</h3>
         <ul>
           <li>Sopa campesina</li>
-          <li>Alverjas</li>
+          <li>Blanquillos</li>
           <li>Verduras al vapor</li>
           <li>Papa amarilla</li>
-          <li>Fricase de pollo</li>
+          <li>Shop suey mixto</li>
           <li>Milanesa de pollo</li>
-          <li>Lomo en salsa de maracuya</li>
+          <li>Filete de pollo en salsa de albahaca</li>
           <li>Hamburguesa en salsa BBQ</li>
-          <li>Chuleta de cerdo</li>
           <li>Contramuslo a la criolla</li>
           <li>Ensalada mixta</li>
-          <li>Limonada/te frio/jugo de mango sin azucar</li>
+          <li>Aguapanela con limon/jugo frutos amarillos sin azucar</li>
         </ul>
       </div>
 
