--- a/index.html
+++ b/index.html
@@ -70,20 +70,20 @@
       </div>
 
       <div class="menu-day">
-        <h3>Jueves</h3>
+        <h3>Jueves 15 de Mayo de 2025</h3>
         <ul>
-          <li>Sopa de platano frito</li>
+          <li>Sopa de verduras</li>
           <li>Garbanzos</li>
-          <li>Ullucos guisados</li>
+          <li>Pasta en salsa alpesto</li>
+          <li>Zamba</li>
           <li>Papa amarilla</li>
-          <li>Cerdo a la plancha con chimichurri</li>
+          <li>Lomo de cerdo en salsa de maracuya</li>
           <li>Milanesa de pollo</li>
-          <li>Morrillo a la criolla</li>
-          <li>Filete en salsa de tocineta</li>
-          <li>Contramuslo a la napolitana</li>
-          <li>Pescado apanado</li>
+          <li>Albondigas en salsa napolitana</li>
+          <li>Filete en salsa de queso</li>
+          <li>Contramuslo en su jugo</li>
           <li>Ensalada mixta</li>
-          <li>Aguapanela con limon/Limonada/jugo de mora sin azucar</li>
+          <li>Aguapanela con limon/jugo de piña sin azucar</li>
         </ul>
       </div>
 
