--- a/index.html
+++ b/index.html
@@ -88,21 +88,22 @@
       </div>
 
       <div class="menu-day">
-        <h3>Viernes</h3>
+        <h3>Viernes 16 de mayo de 2025</h3>
         <ul>
           <li>Sopa de pasta</li>
           <li>Frijoles</li>
-          <li>Suquini al vapor</li>
+          <li>Verduras al dente</li>
           <li>Papa amarilla</li>
           <li>Chorizo trifasico</li>
           <li>Combinado de chorizo con carne molida</li>
           <li>Milanesa de pollo</li>
           <li>Carne Molida</li>
-          <li>Contramuslo a la criolla</li>
-          <li>Filete de pollo en salsa de albahaca</li>
+          <li>Morrillo a la criolla</li>
+          <li>Chicharron</li>
+          <li>Filete de pollo en salsa napolitana</li>
           <li>Ensalada roja</li>
           <li>Ensalada mixta</li>
-          <li>Aguapanela con limon/Limonada/jugo de piña sin azucar</li>
+          <li>Aguapanela con limon/Limonada/jugo de mango sin azucar</li>
         </ul>
       </div>
       <div class="menu-alergenos">
