--- a/index.html
+++ b/index.html
@@ -16,21 +16,19 @@
       <h4>Este menu esta sujeto a cambios</h4>
 
       <div class="menu-day">
-        <h3>Lunes</h3>
+        <h3>Lunes 19 de mayo de 2025</h3>
         <ul>
           <li>Sopa de cuchuco</li>
           <li>Lentejas</li>
-          <li>Verduras</li>
-          <li>Pasta a las finas hierbas</li>            
+          <li>Ullucos</li>
           <li>Papa amarilla</li>
-          <li>Carne molida a la boloñesa</li>
-          <li>Desgranado de pollo</li>
-          <li>Pescado apanado</li>
+          <li>Lomo de cerdo en salsa de champiñones</li>
+          <li>Hamburguesa ahumada en salsa BBQ</li>
+          <li>Filete de pollo en salsa de durazno</li>
           <li>Contramuslo a la criolla</li>
           <li>Milanesa de pollo</li>
-          <li>Costilla de res en su jugo</li>
           <li>Ensalada mixta</li>
-          <li>Aguapanela con limon/te frio/jugo de mango sin azucar</li>
+          <li>Aguapanela con limon/jugo de papaya sin azucar</li>
         </ul>
       </div>
 
