--- a/index.html
+++ b/index.html
@@ -33,20 +33,20 @@
       </div>
 
       <div class="menu-day">
-        <h3>Martes</h3>
+        <h3>Martes 20 de mayo de 2025</h3>
         <ul>
           <li>Sancocho</li>
-          <li>Alverjas</li>
+          <li>Caraotas</li>
           <li>Verduras al vapor</li>
           <li>Papa amarilla</li>
-          <li>Suprema de pollo en champiñones</li>
-          <li>Costilla en salsa BBQ</li>
+          <li>Chuleta de cerdo</li>
+          <li>Desgranado de pollo</li>
           <li>Milanesa de pollo</li>
-          <li>Pincho mixto de costilla y pollo</li>
-          <li>Contramuslo a la broaster</li>
-          <li>Filete de pollo a las finas hierbas</li>
-          <li>Ensalada dulce</li>
-          <li>Aguapanela con limon/Limonada/jugo de piña sin azucar</li>
+          <li>Costilla ahumada en salsa BBQ</li>
+          <li>Contramuslo en salsa napolitana</li>
+          <li>Filete de pollo en salsa de albahaca</li>
+          <li>Ensalada mixta</li>
+          <li>Aguapanela con limon/Limonada/jugo de mango sin azucar</li>
         </ul>
       </div>
 
