--- a/index.html
+++ b/index.html
@@ -51,19 +51,19 @@
       </div>
 
       <div class="menu-day">
-        <h3>Miércoles 14 de mayo de 2025</h3>
+        <h3>Miércoles 21 de mayo de 2025</h3>
         <ul>
-          <li>Sopa campesina</li>
-          <li>Blanquillos</li>
-          <li>Verduras al vapor</li>
+          <li>Sopa de cuchuco</li>
+          <li>Alverjas</li>
+          <li>Verduras al dente</li>
           <li>Papa amarilla</li>
-          <li>Shop suey mixto</li>
+          <li>Shop suey de cerdo</li>
           <li>Milanesa de pollo</li>
-          <li>Filete de pollo en salsa de albahaca</li>
-          <li>Hamburguesa en salsa BBQ</li>
-          <li>Contramuslo a la criolla</li>
-          <li>Ensalada mixta</li>
-          <li>Aguapanela con limon/jugo frutos amarillos sin azucar</li>
+          <li>Chorizo trifasico</li>
+          <li>Filete de pollo en salsa de naranja</li>
+          <li>Contramuslo apanado</li>
+          <li>Ensalada dulce</li>
+          <li>Aguapanela con limon/jugo de piña sin azucar</li>
         </ul>
       </div>
 
