--- a/index.html
+++ b/index.html
@@ -68,20 +68,20 @@
       </div>
 
       <div class="menu-day">
-        <h3>Jueves 15 de Mayo de 2025</h3>
+        <h3>Jueves 22 de Mayo de 2025</h3>
         <ul>
-          <li>Sopa de verduras</li>
+          <li>Sopa campesina</li>
           <li>Garbanzos</li>
           <li>Pasta en salsa alpesto</li>
-          <li>Zamba</li>
+          <li>Verduras al vapor</li>
           <li>Papa amarilla</li>
-          <li>Lomo de cerdo en salsa de maracuya</li>
+          <li>Costilla en salsas napolitana</li>
           <li>Milanesa de pollo</li>
           <li>Albondigas en salsa napolitana</li>
-          <li>Filete en salsa de queso</li>
-          <li>Contramuslo en su jugo</li>
+          <li>Filete en salsa de maicitos dulces</li>
+          <li>Contramuslo a la criolla</li>
           <li>Ensalada mixta</li>
-          <li>Aguapanela con limon/jugo de piña sin azucar</li>
+          <li>Aguapanela con tamarindo/jugo de mango sin azucar</li>
         </ul>
       </div>
 
