--- a/index.html
+++ b/index.html
@@ -16,19 +16,19 @@
       <h4>Este menu esta sujeto a cambios</h4>
 
       <div class="menu-day">
-        <h3>Lunes 19 de mayo de 2025</h3>
+        <h3>Lunes 26 de mayo de 2025</h3>
         <ul>
-          <li>Sopa de cuchuco</li>
+          <li>Sopa de ajiaco</li>
           <li>Lentejas</li>
-          <li>Ullucos</li>
+          <li>Zamba</li>
           <li>Papa amarilla</li>
-          <li>Lomo de cerdo en salsa de champiñones</li>
-          <li>Hamburguesa ahumada en salsa BBQ</li>
-          <li>Filete de pollo en salsa de durazno</li>
-          <li>Contramuslo a la criolla</li>
+          <li>Suprema de pollo en salsa de albahaca</li>
+          <li>Carne desmechada</li>
+          <li>Costilla ahumada en salsa BBQ</li>
+          <li>Contramuslo apanado</li>
           <li>Milanesa de pollo</li>
           <li>Ensalada mixta</li>
-          <li>Aguapanela con limon/jugo de papaya sin azucar</li>
+          <li>Aguapanela con limon/jugo de tomate de arbol sin azucar</li>
         </ul>
       </div>
 
