--- a/index.html
+++ b/index.html
@@ -33,19 +33,18 @@
       </div>
 
       <div class="menu-day">
-        <h3>Martes 20 de mayo de 2025</h3>
+        <h3>Martes 27 de mayo de 2025</h3>
         <ul>
-          <li>Sancocho</li>
-          <li>Caraotas</li>
+          <li>Sopa de cereal</li>
+          <li>Blanquillos</li>
           <li>Verduras al vapor</li>
           <li>Papa amarilla</li>
-          <li>Chuleta de cerdo</li>
-          <li>Desgranado de pollo</li>
+          <li>Lomo de cerdo en salsa de maracuya</li>
+          <li>Filete de pollo en salsa de champiñones</li>
+          <li>Contramuslo a la criolla</li>
           <li>Milanesa de pollo</li>
-          <li>Costilla ahumada en salsa BBQ</li>
-          <li>Contramuslo en salsa napolitana</li>
-          <li>Filete de pollo en salsa de albahaca</li>
-          <li>Ensalada mixta</li>
+          <li>Hamburguesa ahumadaen pico de gallo</li>
+          <li>Ensalada verde</li>
           <li>Aguapanela con limon/Limonada/jugo de mango sin azucar</li>
         </ul>
       </div>
