--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
           <li>Milanesa de pollo</li>
           <li>Hamburguesa ahumadaen pico de gallo</li>
           <li>Ensalada verde</li>
-          <li>Aguapanela con limon/Limonada/jugo de mango sin azucar</li>
+          <li>Aguapanela con tamarindo/jugo de mango sin azucar</li>
         </ul>
       </div>
 
