--- a/index.html
+++ b/index.html
@@ -33,19 +33,19 @@
       </div>
 
       <div class="menu-day">
-        <h3>Martes 27 de mayo de 2025</h3>
+        <h3>Martes 03 de junio de 2025</h3>
         <ul>
-          <li>Sopa de cereal</li>
-          <li>Blanquillos</li>
+          <li>Sopa de pasta</li>
+          <li>Lentejas</li>
           <li>Verduras al vapor</li>
           <li>Papa amarilla</li>
-          <li>Lomo de cerdo en salsa de maracuya</li>
-          <li>Filete de pollo en salsa de champiñones</li>
+          <li>Carne desmechada con maicitos</li>
+          <li>Costilla ahumada en salsa BBQ</li>
           <li>Contramuslo a la criolla</li>
           <li>Milanesa de pollo</li>
-          <li>Hamburguesa ahumadaen pico de gallo</li>
+          <li>Chorizo trifasico</li>
           <li>Ensalada verde</li>
-          <li>Aguapanela con tamarindo/jugo de mango sin azucar</li>
+          <li>Aguapanela con limon/jugo de tomate de arbol sin azucar</li>
         </ul>
       </div>
 
