--- a/index.html
+++ b/index.html
@@ -50,19 +50,19 @@
       </div>
 
       <div class="menu-day">
-        <h3>Miércoles 21 de mayo de 2025</h3>
+        <h3>Miércoles 04 de junio de 2025</h3>
         <ul>
-          <li>Sopa de cuchuco</li>
+          <li>Sancocho</li>
           <li>Alverjas</li>
           <li>Verduras al dente</li>
           <li>Papa amarilla</li>
-          <li>Shop suey de cerdo</li>
-          <li>Milanesa de pollo</li>
-          <li>Chorizo trifasico</li>
-          <li>Filete de pollo en salsa de naranja</li>
+          <li>Arroz mixto</li>
+          <li>Lomo de cerdo en salsa de maracuya</li>
+          <li>Filete de pollo en salsa de champiñones</li>
           <li>Contramuslo apanado</li>
+          <li>Milanesa de pollo</li>
           <li>Ensalada dulce</li>
-          <li>Aguapanela con limon/jugo de piña sin azucar</li>
+          <li>Aguapanela con limon/jugo de mango sin azucar</li>
         </ul>
       </div>
 
