--- a/index.html
+++ b/index.html
@@ -67,20 +67,20 @@
       </div>
 
       <div class="menu-day">
-        <h3>Jueves 22 de Mayo de 2025</h3>
+        <h3>Jueves 05 de junio de 2025</h3>
         <ul>
           <li>Sopa campesina</li>
           <li>Garbanzos</li>
-          <li>Pasta en salsa alpesto</li>
-          <li>Verduras al vapor</li>
+          <li>Pasta a las finas hierbas</li>
+          <li>Verduras al dente</li>
           <li>Papa amarilla</li>
-          <li>Costilla en salsas napolitana</li>
+          <li>Costilla de res en su jugo</li>
           <li>Milanesa de pollo</li>
           <li>Albondigas en salsa napolitana</li>
-          <li>Filete en salsa de maicitos dulces</li>
-          <li>Contramuslo a la criolla</li>
+          <li>Filete en salsa de maicitos</li>
+          <li>Cerdo a la plancha</li>
           <li>Ensalada mixta</li>
-          <li>Aguapanela con tamarindo/jugo de mango sin azucar</li>
+          <li>Aguapanela con limón/jugo de frutos amarillos sin azucar</li>
         </ul>
       </div>
 
