--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
       </div>
 
       <div class="menu-day">
-        <h3>Viernes 30 de mayo de 2025</h3>
+        <h3>Viernes 06 de junio de 2025</h3>
         <ul>
           <li>Sopa de pasta</li>
           <li>Frijoles</li>
@@ -95,11 +95,11 @@
           <li>Combinado de chorizo con carne molida</li>
           <li>Milanesa de pollo</li>
           <li>Carne Molida</li>
-          <li>Contramuslo a la criolla</li>
+          <li>Contramuslo en salsa de tocineta</li>
           <li>Chicharron</li>
           <li>Ensalada roja</li>
           <li>Ensalada mixta</li>
-          <li>Aguapanela con limon/jugo de maracuya sin azucar</li>
+          <li>Aguapanela con limon/jugo de tomate de arbol sin azucar</li>
         </ul>
       </div>
       <div class="menu-alergenos">
