--- a/index.html
+++ b/index.html
@@ -33,19 +33,19 @@
       </div>
 
       <div class="menu-day">
-        <h3>Martes 03 de junio de 2025</h3>
+        <h3>Martes 22 de julio de 2025</h3>
         <ul>
-          <li>Sopa de pasta</li>
-          <li>Lentejas</li>
+          <li>Sancocho de guineo</li>
+          <li>Caraotas</li>
           <li>Verduras al vapor</li>
           <li>Papa amarilla</li>
+          <li>Filete en salsa de albahaca</li>
           <li>Carne desmechada con maicitos</li>
           <li>Costilla ahumada en salsa BBQ</li>
-          <li>Contramuslo a la criolla</li>
           <li>Milanesa de pollo</li>
-          <li>Chorizo trifasico</li>
+          <li>Contramuslo al horno</li>
           <li>Ensalada verde</li>
-          <li>Aguapanela con limon/jugo de tomate de arbol sin azucar</li>
+          <li>Aguapanela con limon/jugo de mandarina sin azucar</li>
         </ul>
       </div>
 
