--- a/index.html
+++ b/index.html
@@ -50,19 +50,19 @@
       </div>
 
       <div class="menu-day">
-        <h3>Miércoles 04 de junio de 2025</h3>
+        <h3>Miércoles 23 de julio de 2025</h3>
         <ul>
-          <li>Sancocho</li>
+          <li>Sopa campesina</li>
           <li>Alverjas</li>
           <li>Verduras al dente</li>
           <li>Papa amarilla</li>
-          <li>Arroz mixto</li>
-          <li>Lomo de cerdo en salsa de maracuya</li>
-          <li>Filete de pollo en salsa de champiñones</li>
-          <li>Contramuslo apanado</li>
+          <li>Desgranado de pollo</li>
+          <li>Albondigas en salsa napolitana</li>
+          <li>Filete de pollo en salsa de tocineta</li>
+          <li>Contramuslo a la criolla</li>
           <li>Milanesa de pollo</li>
           <li>Ensalada dulce</li>
-          <li>Aguapanela con limon/jugo de mango sin azucar</li>
+          <li>Aguapanela con limon/jugo de mora sin azucar</li>
         </ul>
       </div>
 
