--- a/index.html
+++ b/index.html
@@ -16,19 +16,19 @@
       <h4>Este menu esta sujeto a cambios</h4>
 
       <div class="menu-day">
-        <h3>Lunes 21 de julio de 2025</h3>
+        <h3>Lunes 28 de julio de 2025</h3>
         <ul>
-          <li>Sopa de ajiaco</li>
+          <li>Sopa campesina</li>
           <li>Lentejas</li>
-          <li>Zamba</li>
+          <li>Verduras al vapor</li>
           <li>Papa amarilla</li>
-          <li>Suprema de pollo en salsa de albahaca</li>
-          <li>Carne desmechada</li>
-          <li>Costilla ahumada en salsa BBQ</li>
+          <li>Lomo de cerdo en salsa de ciruelas</li>
+          <li>Filete de pollo en salsa de maicitos</li>
+          <li>Carne de hamburguesa en salsa BBQ</li>
           <li>Contramuslo apanado</li>
           <li>Milanesa de pollo</li>
           <li>Ensalada mixta</li>
-          <li>Aguapanela con limon/jugo de tomate de arbol sin azucar</li>
+          <li>Aguapanela con limon/jugo de frutos amarillos sin azucar</li>
         </ul>
       </div>
 
