--- a/index.html
+++ b/index.html
@@ -16,19 +16,19 @@
       <h4>Este menu esta sujeto a cambios</h4>
 
       <div class="menu-day">
-        <h3>Lunes 28 de julio de 2025</h3>
+        <h3>Lunes 04 de agosto de 2025</h3>
         <ul>
-          <li>Sopa campesina</li>
+          <li>Sopa de cebada con verduras</li>
           <li>Lentejas</li>
           <li>Verduras al vapor</li>
           <li>Papa amarilla</li>
-          <li>Lomo de cerdo en salsa de ciruelas</li>
-          <li>Filete de pollo en salsa de maicitos</li>
-          <li>Carne de hamburguesa en salsa BBQ</li>
-          <li>Contramuslo apanado</li>
+          <li>Lomo de cerdo en salsa BBQ</li>
+          <li>Filete de pollo en salsa de champiñones</li>
+          <li>Shopsue de costilla</li>
+          <li>Contramuslo a la criolla</li>
           <li>Milanesa de pollo</li>
-          <li>Ensalada mixta</li>
-          <li>Aguapanela con limon/jugo de frutos amarillos sin azucar</li>
+          <li>Ensalada dulce</li>
+          <li>Aguapanela con limon/jugo de papaya sin azucar</li>
         </ul>
       </div>
 
@@ -126,3 +126,4 @@
     </footer>
   </body>
 </html>
+
