--- a/index.html
+++ b/index.html
@@ -85,21 +85,22 @@
       </div>
 
       <div class="menu-day">
-        <h3>Viernes 06 de junio de 2025</h3>
+        <h3>Viernes 08 de agosto de 2025</h3>
         <ul>
-          <li>Sopa de pasta</li>
+          <li>Sopa de cereal</li>
           <li>Frijoles</li>
-          <li>Verduras al vapor</li>
+          <li>Verduras al dente</li>
           <li>Papa amarilla</li>
           <li>Chorizo trifasico</li>
           <li>Combinado de chorizo con carne molida</li>
           <li>Milanesa de pollo</li>
           <li>Carne Molida</li>
-          <li>Contramuslo en salsa de tocineta</li>
+          <li>Lomo de cerdo en chimichurri</li>
+          <li>Contramuslo a la criolla</li>
           <li>Chicharron</li>
           <li>Ensalada roja</li>
           <li>Ensalada mixta</li>
-          <li>Aguapanela con limon/jugo de tomate de arbol sin azucar</li>
+          <li>Aguapanela con limon/jugo de frutos amarillos sin azucar</li>
         </ul>
       </div>
       <div class="menu-alergenos">
@@ -126,4 +127,5 @@
     </footer>
   </body>
 </html>
+
 
