--- a/index.html
+++ b/index.html
@@ -33,17 +33,19 @@
       </div>
 
       <div class="menu-day">
-        <h3>Martes 22 de julio de 2025</h3>
+        <h3>Martes 12 de agosto de 2025</h3>
         <ul>
           <li>Sancocho de guineo</li>
-          <li>Caraotas</li>
+          <li>Blanquillos</li>
           <li>Verduras al vapor</li>
           <li>Papa amarilla</li>
-          <li>Filete en salsa de albahaca</li>
+          <li>Shop suey de cerdo</li>
           <li>Carne desmechada con maicitos</li>
           <li>Costilla ahumada en salsa BBQ</li>
+          <li>Filete de pollo en salsa de mani</li>
+          <li>Pescado apanado</li>
           <li>Milanesa de pollo</li>
-          <li>Contramuslo al horno</li>
+          <li>Contramuslo a la criolla</li>
           <li>Ensalada verde</li>
           <li>Aguapanela con limon/jugo de mandarina sin azucar</li>
         </ul>
@@ -127,5 +129,6 @@
     </footer>
   </body>
 </html>
+
 
 
