--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <h4>Este menu esta sujeto a cambios</h4>
 
       <div class="menu-day">
-        <h3>Lunes 04 de agosto de 2025</h3>
+        <h3>Lunes 11 de agosto de 2025</h3>
         <ul>
           <li>Sopa de cebada con verduras</li>
           <li>Lentejas</li>
@@ -52,19 +52,19 @@
       </div>
 
       <div class="menu-day">
-        <h3>Miércoles 23 de julio de 2025</h3>
+        <h3>Miércoles 13 de agosto de 2025</h3>
         <ul>
           <li>Sopa campesina</li>
           <li>Alverjas</li>
           <li>Verduras al dente</li>
           <li>Papa amarilla</li>
-          <li>Desgranado de pollo</li>
-          <li>Albondigas en salsa napolitana</li>
+          <li>Lomo de cerdo en salsa de coco</li>
+          <li>Chorizo trifasico</li>
           <li>Filete de pollo en salsa de tocineta</li>
-          <li>Contramuslo a la criolla</li>
+          <li>Contramuslo al horno</li>
           <li>Milanesa de pollo</li>
-          <li>Ensalada dulce</li>
-          <li>Aguapanela con limon/jugo de mora sin azucar</li>
+          <li>Ensalada mixta</li>
+          <li>Aguapanela con limon/jugo de frutos amarillos sin azucar</li>
         </ul>
       </div>
 
@@ -129,6 +129,7 @@
     </footer>
   </body>
 </html>
+
 
 
 
