--- a/index.html
+++ b/index.html
@@ -69,20 +69,21 @@
       </div>
 
       <div class="menu-day">
-        <h3>Jueves 05 de junio de 2025</h3>
+        <h3>Jueves 14 de agosto de 2025</h3>
         <ul>
-          <li>Sopa campesina</li>
+          <li>Sopa de platano frito</li>
           <li>Garbanzos</li>
-          <li>Pasta a las finas hierbas</li>
-          <li>Verduras al dente</li>
+          <li>Pasta al pesto</li>
+          <li>Verduras al vapor</li>
           <li>Papa amarilla</li>
-          <li>Costilla de res en su jugo</li>
+          <li>Albondigas en salsa napolitana</li>
+          <li>Contramuslo apanado</li>
           <li>Milanesa de pollo</li>
           <li>Albondigas en salsa napolitana</li>
-          <li>Filete en salsa de maicitos</li>
-          <li>Cerdo a la plancha</li>
+          <li>Filete en salsa de uchuvas</li>
+          <li>Cerdo en chimichurri</li>
           <li>Ensalada mixta</li>
-          <li>Aguapanela con limón/jugo de frutos amarillos sin azucar</li>
+          <li>Aguapanela con limón/jugo de tomate sin azucar</li>
         </ul>
       </div>
 
@@ -129,6 +130,7 @@
     </footer>
   </body>
 </html>
+
 
 
 
