--- a/index.html
+++ b/index.html
@@ -88,17 +88,17 @@
       </div>
 
       <div class="menu-day">
-        <h3>Viernes 08 de agosto de 2025</h3>
+        <h3>Viernes 15 de agosto de 2025</h3>
         <ul>
-          <li>Sopa de cereal</li>
+          <li>Sopa de avena con verduras</li>
           <li>Frijoles</li>
-          <li>Verduras al dente</li>
+          <li>Verduras al vapor</li>
           <li>Papa amarilla</li>
           <li>Chorizo trifasico</li>
           <li>Combinado de chorizo con carne molida</li>
           <li>Milanesa de pollo</li>
           <li>Carne Molida</li>
-          <li>Lomo de cerdo en chimichurri</li>
+          <li>fileta de pollo a las finas hierbas</li>
           <li>Contramuslo a la criolla</li>
           <li>Chicharron</li>
           <li>Ensalada roja</li>
@@ -130,6 +130,7 @@
     </footer>
   </body>
 </html>
+
 
 
 
