--- a/index.html
+++ b/index.html
@@ -16,17 +16,19 @@
       <h4>Este menu esta sujeto a cambios</h4>
 
       <div class="menu-day">
-        <h3>Lunes 11 de agosto de 2025</h3>
+        <h3>Lunes 25 de agosto de 2025</h3>
         <ul>
-          <li>Sopa de cebada con verduras</li>
+          <li>Sopa campesina</li>
           <li>Lentejas</li>
           <li>Verduras al vapor</li>
           <li>Papa amarilla</li>
-          <li>Lomo de cerdo en salsa BBQ</li>
-          <li>Filete de pollo en salsa de champiñones</li>
-          <li>Shopsue de costilla</li>
+          <li>Desgranado de pollo</li>
+          <li>Pescado apanado</li>
+          <li>Shop suey en salsa BBQ</li>
           <li>Contramuslo a la criolla</li>
+          <li>Filete de pollo en salsa de uchuvas</li>
           <li>Milanesa de pollo</li>
+          <li>Cerdo a la plancha</li>
           <li>Ensalada dulce</li>
           <li>Aguapanela con limon/jugo de papaya sin azucar</li>
         </ul>
@@ -130,6 +132,7 @@
     </footer>
   </body>
 </html>
+
 
 
 
