--- a/index.html
+++ b/index.html
@@ -35,21 +35,20 @@
       </div>
 
       <div class="menu-day">
-        <h3>Martes 12 de agosto de 2025</h3>
+        <h3>Martes 26 de agosto de 2025</h3>
         <ul>
-          <li>Sancocho de guineo</li>
+          <li>Sancocho de cuchuco</li>
           <li>Blanquillos</li>
           <li>Verduras al vapor</li>
           <li>Papa amarilla</li>
-          <li>Shop suey de cerdo</li>
+          <li>Lomo en salsa de coco</li>
           <li>Carne desmechada con maicitos</li>
-          <li>Costilla ahumada en salsa BBQ</li>
-          <li>Filete de pollo en salsa de mani</li>
-          <li>Pescado apanado</li>
+          <li>Contramuslo apanado</li>
+          <li>Filete de pollo en salsa de champiñones</li>
           <li>Milanesa de pollo</li>
           <li>Contramuslo a la criolla</li>
           <li>Ensalada verde</li>
-          <li>Aguapanela con limon/jugo de mandarina sin azucar</li>
+          <li>Aguapanela con limon/jugo de mora sin azucar</li>
         </ul>
       </div>
 
@@ -132,6 +131,7 @@
     </footer>
   </body>
 </html>
+
 
 
 
