--- a/index.html
+++ b/index.html
@@ -53,18 +53,20 @@
       </div>
 
       <div class="menu-day">
-        <h3>Miércoles 13 de agosto de 2025</h3>
+        <h3>Miércoles 27 de agosto de 2025</h3>
         <ul>
-          <li>Sopa campesina</li>
+          <li>Sopa de verduras</li>
           <li>Alverjas</li>
           <li>Verduras al dente</li>
+          <li>Pasta en salsa al pesto</li>
           <li>Papa amarilla</li>
-          <li>Lomo de cerdo en salsa de coco</li>
-          <li>Chorizo trifasico</li>
-          <li>Filete de pollo en salsa de tocineta</li>
-          <li>Contramuslo al horno</li>
+          <li>Lomo de cerdo en salsa de vino</li>
+          <li>Costilla ahumada en salsa BBQ</li>
+          <li>Albondigas en salsa napolitana</li>
+          <li>Filete de pollo en salsa de mani</li>
+          <li>Contramuslo en su jugo</li>
           <li>Milanesa de pollo</li>
-          <li>Ensalada mixta</li>
+          <li>Ensalada dulce</li>
           <li>Aguapanela con limon/jugo de frutos amarillos sin azucar</li>
         </ul>
       </div>
@@ -131,6 +133,7 @@
     </footer>
   </body>
 </html>
+
 
 
 
