--- a/index.html
+++ b/index.html
@@ -72,21 +72,21 @@
       </div>
 
       <div class="menu-day">
-        <h3>Jueves 14 de agosto de 2025</h3>
+        <h3>Jueves 28 de agosto de 2025</h3>
         <ul>
-          <li>Sopa de platano frito</li>
+          <li>Sancocho</li>
           <li>Garbanzos</li>
           <li>Pasta al pesto</li>
           <li>Verduras al vapor</li>
           <li>Papa amarilla</li>
-          <li>Albondigas en salsa napolitana</li>
-          <li>Contramuslo apanado</li>
+          <li>Arroz mixto</li>
+          <li>Contramuslo al horno</li>
           <li>Milanesa de pollo</li>
-          <li>Albondigas en salsa napolitana</li>
-          <li>Filete en salsa de uchuvas</li>
-          <li>Cerdo en chimichurri</li>
-          <li>Ensalada mixta</li>
-          <li>Aguapanela con limón/jugo de tomate sin azucar</li>
+          <li>Morrillo criollo</li>
+          <li>Filete en salsa de chontaduro</li>
+          <li>shopsuey de cerdo</li>
+          <li>Ensalada de tomate y pepino</li>
+          <li>Aguapanela con limón/jugo de mora sin azucar</li>
         </ul>
       </div>
 
@@ -133,6 +133,7 @@
     </footer>
   </body>
 </html>
+
 
 
 
