--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
       <div class="menu-day">
         <h3>Viernes 29 de agosto de 2025</h3>
         <ul>
-          <li>Sopa de avena con verduras</li>
+          <li>Sopa de pasta</li>
           <li>Frijoles</li>
           <li>Verduras al vapor</li>
           <li>Papa amarilla</li>
@@ -101,12 +101,13 @@
           <li>Combinado de chorizo con carne molida</li>
           <li>Milanesa de pollo</li>
           <li>Carne Molida</li>
+          <li>Lomo de cerdo en chimichurri</li>
           <li>fileta de pollo a las finas hierbas</li>
           <li>Contramuslo a la criolla</li>
           <li>Chicharron</li>
           <li>Ensalada roja</li>
           <li>Ensalada mixta</li>
-          <li>Aguapanela con limon/jugo de frutos amarillos sin azucar</li>
+          <li>Aguapanela con limon/jugo de papaya con limon sin azucar</li>
         </ul>
       </div>
       <div class="menu-alergenos">
@@ -133,6 +134,7 @@
     </footer>
   </body>
 </html>
+
 
 
 
