--- a/index.html
+++ b/index.html
@@ -16,55 +16,57 @@
       <h4>Este menu esta sujeto a cambios</h4>
 
       <div class="menu-day">
-        <h3>Lunes 25 de agosto de 2025</h3>
+        <h3>Lunes 01 de septiembre de 2025</h3>
         <ul>
-          <li>Sopa campesina</li>
+          <li>Sopa de ajiaco</li>
           <li>Lentejas</li>
           <li>Verduras al vapor</li>
+          <li>Ullucos guisados</li>
           <li>Papa amarilla</li>
-          <li>Desgranado de pollo</li>
-          <li>Pescado apanado</li>
-          <li>Shop suey en salsa BBQ</li>
-          <li>Contramuslo a la criolla</li>
-          <li>Filete de pollo en salsa de uchuvas</li>
+          <li>Frikasse de pollo</li>
+          <li>Hamburguesa en salsa BBQ</li>
+          <li>Lomo de cerdo en salsa de maracuya</li>
+          <li>Contramuslo al horno</li>
+          <li>Filete de pollo en salsa de tocineta</li>
           <li>Milanesa de pollo</li>
           <li>Cerdo a la plancha</li>
-          <li>Ensalada dulce</li>
-          <li>Aguapanela con limon/jugo de papaya sin azucar</li>
+          <li>Ensalada mixta</li>
+          <li>Aguapanela con limon/jugo de mora sin azucar</li>
         </ul>
       </div>
 
       <div class="menu-day">
-        <h3>Martes 26 de agosto de 2025</h3>
+        <h3>Martes 02 de septiembre de 2025</h3>
         <ul>
-          <li>Sancocho de cuchuco</li>
-          <li>Blanquillos</li>
+          <li>Sancocho de cereal</li>
+          <li>Frijol caraotas</li>
           <li>Verduras al vapor</li>
           <li>Papa amarilla</li>
-          <li>Lomo en salsa de coco</li>
+          <li>suprema de pollo en salsa de champiñones</li>
           <li>Carne desmechada con maicitos</li>
-          <li>Contramuslo apanado</li>
-          <li>Filete de pollo en salsa de champiñones</li>
+          <li>Contramuslo a la criolla</li>
+          <li>Lomo de cerdo en salsa de chimichurri</li>
           <li>Milanesa de pollo</li>
           <li>Contramuslo a la criolla</li>
+          <li>Filete de pollo a las finas hierbas</li>          
           <li>Ensalada verde</li>
           <li>Aguapanela con limon/jugo de mora sin azucar</li>
         </ul>
       </div>
 
       <div class="menu-day">
-        <h3>Miércoles 27 de agosto de 2025</h3>
+        <h3>Miércoles 03 de septiembre de 2025</h3>
         <ul>
-          <li>Sopa de verduras</li>
+          <li>Sopa de Platano frito</li>
           <li>Alverjas</li>
+          <li>Pasta a las finas hierbas</li>
           <li>Verduras al dente</li>
-          <li>Pasta en salsa al pesto</li>
           <li>Papa amarilla</li>
-          <li>Lomo de cerdo en salsa de vino</li>
-          <li>Costilla ahumada en salsa BBQ</li>
+          <li>Frikasse de cerdo</li>
+          <li>Cerdo a la plancha</li>
           <li>Albondigas en salsa napolitana</li>
-          <li>Filete de pollo en salsa de mani</li>
-          <li>Contramuslo en su jugo</li>
+          <li>Filete de pollo en salsa de durazno</li>
+          <li>Contramuslo apanado</li>
           <li>Milanesa de pollo</li>
           <li>Ensalada dulce</li>
           <li>Aguapanela con limon/jugo de frutos amarillos sin azucar</li>
@@ -72,19 +74,18 @@
       </div>
 
       <div class="menu-day">
-        <h3>Jueves 28 de agosto de 2025</h3>
+        <h3>Jueves 04 de septiembre de 2025</h3>
         <ul>
-          <li>Sancocho</li>
+          <li>Sopa de cuchuco con verduras</li>
           <li>Garbanzos</li>
-          <li>Pasta al pesto</li>
           <li>Verduras al vapor</li>
           <li>Papa amarilla</li>
-          <li>Arroz mixto</li>
-          <li>Contramuslo al horno</li>
+          <li>Pescado apanado</li>
+          <li>Contramuslo a la jardinera</li>
           <li>Milanesa de pollo</li>
           <li>Morrillo criollo</li>
-          <li>Filete en salsa de chontaduro</li>
-          <li>shopsuey de cerdo</li>
+          <li>Filete en salsa de albahaca</li>
+          <li>Lomo de cerdo en salsa de ciruelas</li>
           <li>Ensalada de tomate y pepino</li>
           <li>Aguapanela con limón/jugo de mora sin azucar</li>
         </ul>
@@ -134,6 +135,7 @@
     </footer>
   </body>
 </html>
+
 
 
 
