--- a/index.html
+++ b/index.html
@@ -16,22 +16,20 @@
       <h4>Este menu esta sujeto a cambios</h4>
 
       <div class="menu-day">
-        <h3>Lunes 01 de septiembre de 2025</h3>
+        <h3>Lunes 08 de septiembre de 2025</h3>
         <ul>
-          <li>Sopa de ajiaco</li>
+          <li>Sopa campesina</li>
           <li>Lentejas</li>
           <li>Verduras al vapor</li>
-          <li>Ullucos guisados</li>
           <li>Papa amarilla</li>
-          <li>Frikasse de pollo</li>
-          <li>Hamburguesa en salsa BBQ</li>
-          <li>Lomo de cerdo en salsa de maracuya</li>
-          <li>Contramuslo al horno</li>
-          <li>Filete de pollo en salsa de tocineta</li>
+          <li>Shopsuey de cerdo</li>
+          <li>Contramuslo apanado</li>
+          <li>Morrillo a la criolla</li>
+          <li>Filete de pollo en salsa napolitana</li>
+          <li>Lomo de cerdo en salsa de ciruelas</li>
           <li>Milanesa de pollo</li>
-          <li>Cerdo a la plancha</li>
           <li>Ensalada mixta</li>
-          <li>Aguapanela con limon/jugo de mora sin azucar</li>
+          <li>Aguapanela con limon/jugo de piña sin azucar</li>
         </ul>
       </div>
 
@@ -135,6 +133,7 @@
     </footer>
   </body>
 </html>
+
 
 
 
