--- a/index.html
+++ b/index.html
@@ -34,21 +34,20 @@
       </div>
 
       <div class="menu-day">
-        <h3>Martes 02 de septiembre de 2025</h3>
+        <h3>Martes 09 de septiembre de 2025</h3>
         <ul>
-          <li>Sancocho de cereal</li>
-          <li>Frijol caraotas</li>
+          <li>Sancocho</li>
+          <li>Blanquillos</li>
           <li>Verduras al vapor</li>
           <li>Papa amarilla</li>
-          <li>suprema de pollo en salsa de champiñones</li>
-          <li>Carne desmechada con maicitos</li>
+          <li>Albondigas a la diabla</li>
+          <li>Filete en salsa Strogonoff</li>
           <li>Contramuslo a la criolla</li>
           <li>Lomo de cerdo en salsa de chimichurri</li>
           <li>Milanesa de pollo</li>
           <li>Contramuslo a la criolla</li>
-          <li>Filete de pollo a las finas hierbas</li>          
           <li>Ensalada verde</li>
-          <li>Aguapanela con limon/jugo de mora sin azucar</li>
+          <li>Aguapanela con limon/jugo de mango sin azucar</li>
         </ul>
       </div>
 
@@ -133,6 +132,7 @@
     </footer>
   </body>
 </html>
+
 
 
 
