--- a/index.html
+++ b/index.html
@@ -52,21 +52,22 @@
       </div>
 
       <div class="menu-day">
-        <h3>Miércoles 03 de septiembre de 2025</h3>
+        <h3>Miércoles 10 de septiembre de 2025</h3>
         <ul>
-          <li>Sopa de Platano frito</li>
+          <li>Consome celestino</li>
           <li>Alverjas</li>
           <li>Pasta a las finas hierbas</li>
-          <li>Verduras al dente</li>
+          <li>Verduras al vapor</li>
           <li>Papa amarilla</li>
-          <li>Frikasse de cerdo</li>
+          <li>Suprema de pollo en salsa toscana</li>
+          <li>Contramuslo al horno</li>
+          <li>Costilla ahumada en salsa BBQ</li>
           <li>Cerdo a la plancha</li>
-          <li>Albondigas en salsa napolitana</li>
-          <li>Filete de pollo en salsa de durazno</li>
-          <li>Contramuslo apanado</li>
+          <li>Arroz mixto</li>
+          <li>Filete a las finas hierbas</li>
           <li>Milanesa de pollo</li>
-          <li>Ensalada dulce</li>
-          <li>Aguapanela con limon/jugo de frutos amarillos sin azucar</li>
+          <li>Ensalada mixta</li>
+          <li>Aguapanela con limon/jugo de piña sin azucar</li>
         </ul>
       </div>
 
@@ -132,6 +133,7 @@
     </footer>
   </body>
 </html>
+
 
 
 
