--- a/index.html
+++ b/index.html
@@ -72,20 +72,20 @@
       </div>
 
       <div class="menu-day">
-        <h3>Jueves 04 de septiembre de 2025</h3>
+        <h3>Jueves 11 de septiembre de 2025</h3>
         <ul>
-          <li>Sopa de cuchuco con verduras</li>
+          <li>Sopa de verduras</li>
           <li>Garbanzos</li>
-          <li>Verduras al vapor</li>
+          <li>Ullucos guisados</li>
           <li>Papa amarilla</li>
           <li>Pescado apanado</li>
-          <li>Contramuslo a la jardinera</li>
+          <li>Contramuslo en salsa napolitana</li>
           <li>Milanesa de pollo</li>
-          <li>Morrillo criollo</li>
-          <li>Filete en salsa de albahaca</li>
-          <li>Lomo de cerdo en salsa de ciruelas</li>
-          <li>Ensalada de tomate y pepino</li>
-          <li>Aguapanela con limón/jugo de mora sin azucar</li>
+          <li>Frikasse de pollo</li>
+          <li>Filete en salsa de mani</li>
+          <li>Lomo de cerdo en salsa de uchuvas</li>
+          <li>Ensalada mixta</li>
+          <li>Aguapanela con limón/jugo de frutos amarillos sin azucar</li>
         </ul>
       </div>
 
@@ -133,6 +133,7 @@
     </footer>
   </body>
 </html>
+
 
 
 
