--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
       </div>
 
       <div class="menu-day">
-        <h3>Viernes 29 de agosto de 2025</h3>
+        <h3>Viernes 12 de septiembre de 2025</h3>
         <ul>
           <li>Sopa de pasta</li>
           <li>Frijoles</li>
@@ -100,8 +100,7 @@
           <li>Combinado de chorizo con carne molida</li>
           <li>Milanesa de pollo</li>
           <li>Carne Molida</li>
-          <li>Lomo de cerdo en chimichurri</li>
-          <li>fileta de pollo a las finas hierbas</li>
+          <li>Lomo de cerdo en champiñones</li>
           <li>Contramuslo a la criolla</li>
           <li>Chicharron</li>
           <li>Ensalada roja</li>
@@ -133,6 +132,7 @@
     </footer>
   </body>
 </html>
+
 
 
 
