--- a/index.html
+++ b/index.html
@@ -16,17 +16,18 @@
       <h4>Este menu esta sujeto a cambios</h4>
 
       <div class="menu-day">
-        <h3>Lunes 08 de septiembre de 2025</h3>
+        <h3>Lunes 15 de septiembre de 2025</h3>
         <ul>
-          <li>Sopa campesina</li>
+          <li>Sopa platano frito</li>
           <li>Lentejas</li>
           <li>Verduras al vapor</li>
+          <li>Ensalada mixta</li>
           <li>Papa amarilla</li>
-          <li>Shopsuey de cerdo</li>
-          <li>Contramuslo apanado</li>
-          <li>Morrillo a la criolla</li>
-          <li>Filete de pollo en salsa napolitana</li>
-          <li>Lomo de cerdo en salsa de ciruelas</li>
+          <li>Carne desmechada</li>
+          <li>Contramuslo a la criolla</li>
+          <li>Cerdo en salsa BBQ</li>
+          <li>Filete de pollo en salsa de maicitos</li>
+          <li>Morrillo en su jugo</li>
           <li>Milanesa de pollo</li>
           <li>Ensalada mixta</li>
           <li>Aguapanela con limon/jugo de piña sin azucar</li>
@@ -34,18 +35,19 @@
       </div>
 
       <div class="menu-day">
-        <h3>Martes 09 de septiembre de 2025</h3>
+        <h3>Martes 16 de septiembre de 2025</h3>
         <ul>
-          <li>Sancocho</li>
-          <li>Blanquillos</li>
+          <li>Sopa de avena con verduras</li>
+          <li>Caraotas</li>
           <li>Verduras al vapor</li>
+          <li>Pasta pesto</li>
           <li>Papa amarilla</li>
-          <li>Albondigas a la diabla</li>
-          <li>Filete en salsa Strogonoff</li>
-          <li>Contramuslo a la criolla</li>
-          <li>Lomo de cerdo en salsa de chimichurri</li>
+          <li>Albondigas en salsa napolitana</li>
+          <li>Filete en salsa de mani</li>
+          <li>Contramuslo apanado</li>
+          <li>Lomo de cerdo a la plancha</li>
           <li>Milanesa de pollo</li>
-          <li>Contramuslo a la criolla</li>
+          <li>Costilla en salsa BBQ</li>
           <li>Ensalada verde</li>
           <li>Aguapanela con limon/jugo de mango sin azucar</li>
         </ul>
@@ -132,6 +134,7 @@
     </footer>
   </body>
 </html>
+
 
 
 
