--- a/index.html
+++ b/index.html
@@ -54,22 +54,20 @@
       </div>
 
       <div class="menu-day">
-        <h3>Miércoles 10 de septiembre de 2025</h3>
+        <h3>Miércoles 17 de septiembre de 2025</h3>
         <ul>
-          <li>Consome celestino</li>
+          <li>Sopa de guineo</li>
           <li>Alverjas</li>
-          <li>Pasta a las finas hierbas</li>
-          <li>Verduras al vapor</li>
+          <li>Verduras al dente</li>
           <li>Papa amarilla</li>
-          <li>Suprema de pollo en salsa toscana</li>
+          <li>lomo de cerdo al stroganoff</li>
+          <li>Filete de pollo en salsa de champiñones</li>
           <li>Contramuslo al horno</li>
-          <li>Costilla ahumada en salsa BBQ</li>
-          <li>Cerdo a la plancha</li>
-          <li>Arroz mixto</li>
-          <li>Filete a las finas hierbas</li>
+          <li>Chorizo trifasico</li>
+          <li>shopsuey de costilla</li>
           <li>Milanesa de pollo</li>
           <li>Ensalada mixta</li>
-          <li>Aguapanela con limon/jugo de piña sin azucar</li>
+          <li>Aguapanela con limon/jugo de lulo sin azucar</li>
         </ul>
       </div>
 
@@ -134,6 +132,7 @@
     </footer>
   </body>
 </html>
+
 
 
 
