--- a/index.html
+++ b/index.html
@@ -72,20 +72,19 @@
       </div>
 
       <div class="menu-day">
-        <h3>Jueves 11 de septiembre de 2025</h3>
+        <h3>Jueves 18 de septiembre de 2025</h3>
         <ul>
           <li>Sopa de verduras</li>
           <li>Garbanzos</li>
-          <li>Ullucos guisados</li>
+          <li>Verduras al vapor</li>
           <li>Papa amarilla</li>
-          <li>Pescado apanado</li>
-          <li>Contramuslo en salsa napolitana</li>
+          <li>Hamburguesa ahumada en salsa BBQ</li>
+          <li>Contramuslo en salsa de la casa</li>
           <li>Milanesa de pollo</li>
-          <li>Frikasse de pollo</li>
-          <li>Filete en salsa de mani</li>
-          <li>Lomo de cerdo en salsa de uchuvas</li>
+          <li>Filete en salsa de tocineta</li>
+          <li>Lomo de cerdo en salsa de chimichurri</li>
           <li>Ensalada mixta</li>
-          <li>Aguapanela con limón/jugo de frutos amarillos sin azucar</li>
+          <li>Aguapanela con limón/jugo de papaya sin azucar</li>
         </ul>
       </div>
 
@@ -132,6 +131,7 @@
     </footer>
   </body>
 </html>
+
 
 
 
