--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
       <div class="menu-day">
         <h3>Jueves 18 de septiembre de 2025</h3>
         <ul>
-          <li>Sopa de verduras</li>
+          <li>Sopa de cuchuco</li>
           <li>Garbanzos</li>
           <li>Verduras al vapor</li>
           <li>Papa amarilla</li>
@@ -131,6 +131,7 @@
     </footer>
   </body>
 </html>
+
 
 
 
