--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
       </div>
 
       <div class="menu-day">
-        <h3>Viernes 12 de septiembre de 2025</h3>
+        <h3>Viernes 19 de septiembre de 2025</h3>
         <ul>
           <li>Sopa de pasta</li>
           <li>Frijoles</li>
@@ -99,7 +99,7 @@
           <li>Combinado de chorizo con carne molida</li>
           <li>Milanesa de pollo</li>
           <li>Carne Molida</li>
-          <li>Lomo de cerdo en champiñones</li>
+          <li>Filete de pollo en salsa de albahaca</li>
           <li>Contramuslo a la criolla</li>
           <li>Chicharron</li>
           <li>Ensalada roja</li>
@@ -131,6 +131,7 @@
     </footer>
   </body>
 </html>
+
 
 
 
