--- a/index.html
+++ b/index.html
@@ -16,18 +16,16 @@
       <h4>Este menu esta sujeto a cambios</h4>
 
       <div class="menu-day">
-        <h3>Lunes 15 de septiembre de 2025</h3>
+        <h3>Lunes 22 de septiembre de 2025</h3>
         <ul>
-          <li>Sopa platano frito</li>
+          <li>Consome celestino</li>
           <li>Lentejas</li>
           <li>Verduras al vapor</li>
           <li>Ensalada mixta</li>
           <li>Papa amarilla</li>
-          <li>Carne desmechada</li>
-          <li>Contramuslo a la criolla</li>
-          <li>Cerdo en salsa BBQ</li>
-          <li>Filete de pollo en salsa de maicitos</li>
-          <li>Morrillo en su jugo</li>
+          <li>Morrillo a la criolla</li>
+          <li>Contramuslo a la napolitana</li>
+          <li>Filete de pollo en salsa de albahaca</li>
           <li>Milanesa de pollo</li>
           <li>Ensalada mixta</li>
           <li>Aguapanela con limon/jugo de piña sin azucar</li>
@@ -35,19 +33,19 @@
       </div>
 
       <div class="menu-day">
-        <h3>Martes 16 de septiembre de 2025</h3>
+        <h3>Martes 23 de septiembre de 2025</h3>
         <ul>
-          <li>Sopa de avena con verduras</li>
-          <li>Caraotas</li>
-          <li>Verduras al vapor</li>
-          <li>Pasta pesto</li>
+          <li>Sopa de ramen con verduras</li>
+          <li>Blanquillos</li>
+          <li>Verduras al dente</li>
           <li>Papa amarilla</li>
           <li>Albondigas en salsa napolitana</li>
-          <li>Filete en salsa de mani</li>
-          <li>Contramuslo apanado</li>
-          <li>Lomo de cerdo a la plancha</li>
+          <li>Arroz mixto</li>
+          <li>Filete en salsa de uchuvas</li>
+          <li>Contramuslo al horno</li>
+          <li>Lomo de cerdo en salsa chimichurri</li>
           <li>Milanesa de pollo</li>
-          <li>Costilla en salsa BBQ</li>
+          <li>Frikasse de pollo</li>
           <li>Ensalada verde</li>
           <li>Aguapanela con limon/jugo de mango sin azucar</li>
         </ul>
@@ -131,6 +129,7 @@
     </footer>
   </body>
 </html>
+
 
 
 
