--- a/index.html
+++ b/index.html
@@ -52,20 +52,21 @@
       </div>
 
       <div class="menu-day">
-        <h3>Miércoles 17 de septiembre de 2025</h3>
+        <h3>Miércoles 24 de septiembre de 2025</h3>
         <ul>
-          <li>Sopa de guineo</li>
-          <li>Alverjas</li>
+          <li>Sancocho</li>
+          <li>Arvejas</li>
           <li>Verduras al dente</li>
+          <li>Pasta a las finas hierbas</li>
           <li>Papa amarilla</li>
-          <li>lomo de cerdo al stroganoff</li>
+          <li>lomo de cerdo a la plancha</li>
           <li>Filete de pollo en salsa de champiñones</li>
-          <li>Contramuslo al horno</li>
-          <li>Chorizo trifasico</li>
-          <li>shopsuey de costilla</li>
+          <li>Contramuslo a la criolla</li>
+          <li>Costilla ahumada en salsa BBQ</li>
+          <li>Albondigas en salsa napolitana</li>
           <li>Milanesa de pollo</li>
           <li>Ensalada mixta</li>
-          <li>Aguapanela con limon/jugo de lulo sin azucar</li>
+          <li>Aguapanela con limon/jugo de papaya sin azucar</li>
         </ul>
       </div>
 
@@ -129,6 +130,7 @@
     </footer>
   </body>
 </html>
+
 
 
 
