--- a/index.html
+++ b/index.html
@@ -71,19 +71,20 @@
       </div>
 
       <div class="menu-day">
-        <h3>Jueves 18 de septiembre de 2025</h3>
+        <h3>Jueves 25 de septiembre de 2025</h3>
         <ul>
-          <li>Sopa de cuchuco</li>
+          <li>Sopa de avena con verduras</li>
           <li>Garbanzos</li>
           <li>Verduras al vapor</li>
           <li>Papa amarilla</li>
-          <li>Hamburguesa ahumada en salsa BBQ</li>
-          <li>Contramuslo en salsa de la casa</li>
+          <li>Morrillo a la criolla</li>
+          <li>Contramuslo apanado</li>
           <li>Milanesa de pollo</li>
-          <li>Filete en salsa de tocineta</li>
-          <li>Lomo de cerdo en salsa de chimichurri</li>
+          <li>Filete de pollo a las finas hierbas</li>
+          <li>Suprema de pollo en salsa de tocineta</li>
+          <li>Lomo de cerdo en salsa de ciruelas</li>
           <li>Ensalada mixta</li>
-          <li>Aguapanela con limón/jugo de papaya sin azucar</li>
+          <li>Aguapanela con limón/jugo de tomate de arbol sin azucar</li>
         </ul>
       </div>
 
@@ -130,6 +131,7 @@
     </footer>
   </body>
 </html>
+
 
 
 
